# composition-framework

./: .clang-format  .clang-tidy  .drone.yml  .gitignore  CMakeLists.txt
cmake/: composition-frameworkConfig.cmake.in  config.cmake.in
constraint-handler/: CMakeLists.txt  ConflictGraph.cpp  ConstraintAnalysisPass.cpp
examples/: build.sh  example.c
hook/: hook.cpp  patcher.py  patchers.json
include/composition/: Analysis.hpp  AnalysisPass.hpp  AnalysisRegistry.hpp  CompositionFrameworkPass.hpp  ConflictResolver.hpp  ConflictResolverRegistry.hpp  EnhancementResolver.hpp  EnhancementResolverRegistry.hpp  GraphPass.hpp  GraphPrinter.hpp  Manifest.hpp  ManifestRegistry.hpp  ManifestValueHandle.hpp  Pass.hpp  PreservedValueRegistry.hpp  Protection.hpp  ProtectionPass.hpp  ProtectionRegistry.hpp  Stats.hpp  options.hpp  profiler.hpp
include/composition/filter/: FilterInfo.hpp  FunctionFilter.hpp  FunctionInfo.hpp  GlobalValueInfo.hpp  ValueInfo.hpp
include/composition/graph/: ILPSolver.hpp  ProtectionGraph.hpp  bitmask.hpp  constraint.hpp  dependency.hpp  dot.hpp  edge.hpp  edge_type.hpp  empty_graph.hpp  filtered_graph_hidden.hpp  graph.hpp  graphml.hpp  graphviz.hpp  present.hpp  preserved.hpp  protection.hpp  scc.hpp  topological_sort.hpp  vertex.hpp  vertex_attribute_set.hpp  vertex_type.hpp
include/composition/graph/algorithm/: all_cycles.hpp  strong_components.hpp  topological_sort.hpp
include/composition/graph/constraint/: bitmask.hpp  constraint.hpp  dependency.hpp  n_of.hpp  present.hpp  preserved.hpp  true.hpp
include/composition/graph/filter/: dependency.hpp  filter.hpp  removed.hpp  selfcycle.hpp
include/composition/graph/util/: constraint_map.hpp  dot.hpp  graphml.hpp  graphviz.hpp  index_map.hpp  vertex_count.hpp
include/composition/ilp/: Constraint.hpp  ILP.hpp  Variable.hpp
include/composition/metric/: Connectivity.hpp  Coverage.hpp  ManifestStats.hpp  Performance.hpp  Stats.hpp  Weights.hpp
include/composition/optimize/: Optimizer.hpp
include/composition/strategy/: Avoidance.hpp  Random.hpp  Strategy.hpp  Weight.hpp
include/composition/support/: Analysis.hpp  ManifestValueHandle.hpp  Pass.hpp  options.hpp
include/composition/trace/: PreservedValueRegistry.hpp  TraceableValue.hpp
include/composition/util/: bimap.hpp  enums.hpp  functions.hpp  print_map.hpp  strings.hpp
include/constraints/: AnalysisPass.hpp  ConflictGraph.h  ConflictGraph.hpp  GraphPass.hpp  GraphPrinter.h  GraphPrinter.hpp  ProtectionPass.hpp
src/: AnalysisPass.cpp  CMakeLists.txt  ConflictGraph.cpp  ConstraintAnalysisPass.cpp  GraphPass.cpp  GraphPrinter.cpp  MMap.h  ManifestRegistry.cpp  ProtectionPass.cpp
src/composition/: AnalysisPass.cpp  AnalysisRegistry.cpp  CompositionFrameworkPass.cpp  CompositionStats.cpp  GraphPass.cpp  Manifest.cpp  ManifestRegistry.cpp  ManifestValueHandle.cpp  Pass.cpp  ProtectionPass.cpp  ProtectionRegistry.cpp  Stats.cpp  options.cpp  profiler.hpp
src/composition/filter/: FunctionFilter.cpp
src/composition/graph/: ILPSolver.cpp  ProtectionGraph.cpp  constraint.cpp  dependency.cpp  edge.cpp  present.cpp  preserved.cpp  vertex.cpp  vertex_type.cpp
src/composition/graph/constraint/: constraint.cpp  dependency.cpp  n_of.cpp  present.cpp  preserved.cpp  true.cpp
src/composition/graph/util/: graphviz.cpp
src/composition/ilp/: Constraint.cpp  ILP.cpp  Variable.cpp
src/composition/metric/: Connectivity.cpp  Coverage.cpp  Performance.cpp  Stats.cpp  Weights.cpp
src/composition/strategy/: Avoidance.cpp  Random.cpp  Weight.cpp
src/composition/support/: ManifestValueHandle.cpp  Pass.cpp  options.cpp
src/composition/trace/: PreservedValueRegistry.cpp  TraceableValue.cpp
src/composition/util/: functions.cpp  strings.cpp
src/filter/: FilterInfo.cpp  FunctionFilter.cpp  FunctionInfo.cpp  GlobalValueInfo.cpp
src/graph/: ProtectionGraph.cpp  constraint.cpp  dot.cpp  edge.cpp  edge_type.cpp  empty_graph.cpp  graphviz.cpp  vertex.cpp
src/graph/util/: graphviz.cpp
src/metric/: Coverage.cpp  Performance.cpp
src/trace/: PreservedValueRegistry.cpp  TraceableValue.cpp
src/util/: functions.cpp  strings.cpp
test/: CMakeLists.txt  cycles.cpp  double_edges.cpp  topological_sort.cpp
